tests/spec/compile-fail/131_partial_struct_use.zn
// category: compile-fail
// profile: freestanding
// purpose: partially initialized aggregate cannot be used as a complete value

module tests.fail.partialStructUse;

struct Header {
    magic: U32,
    version: U16,
}

fn bad() -> Header {
    val header: Header;
    header.magic = 0x5A5A;
    return header; // expected-error: header.version is not initialized
}
